--- a/src/components-styles/bottom-page-nav.scss
+++ b/src/components-styles/bottom-page-nav.scss
@@ -8,8 +8,6 @@
   display: flex;
   justify-content: space-between;
   background-color: white;
-  position: fixed;
-  bottom: 0;
   z-index: 100;
 }
 
@@ -45,5 +43,8 @@
     margin: 0;
     padding: 15px 18px;
     box-shadow: $bx-shadow;
+    position: fixed;
+    bottom: 0;
+    left: 0;
   }
 }
