--- a/src/index.scss
+++ b/src/index.scss
@@ -45,7 +45,7 @@ body {
   border-radius: $bd-radius;
   background-color: $White;
   color: $Marine-blue;
-  margin: 15px;
+  margin: 15px 15px 0;
 
   .payment-time-frame {
     font-weight: 600;
@@ -113,7 +113,8 @@ body {
     width: 90%;
     margin: 0 auto;
     z-index: 5;
-    padding: 0px 20px;
+    padding: 5px 20px 30px;
+
     box-shadow: 0px 9px 20px -10px rgba(128, 128, 128, 0.541);
     border-radius: 10px;
 
